config_files/design-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  design-app
  namespace: testing
  labels:
    app:  design-app
spec:
  selector:
    matchLabels:
      app: design-app
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  design-app
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  design-app
        image:  us-central1-docker.pkg.dev/nimble-album-369317/interior-design/ndansi-design
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort:  80
          name:  design-app
      #   volumeMounts:
      #   - name: localtime
      #     mountPath: /etc/localtime
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
