config_files/design-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: design-app
  namespace: testing
spec:
  selector:
    app: design-app
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: design-app
    protocol: TCP
    port: 80
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30777
